# haroldholt2

./: .gitignore  AvailableFields_Tweepy  README.MD  TwitterAPIfromDTC.py  hidden1.py  pyproject.toml  tweetpol.py  twitter1.py  twitter2.py
data/: AUS_POL_TWT.txt  AUS_POL_TWT_data.txt  AUS_POL_TWT_users.txt  governors.csv  tweet_dataset_finalised.csv  tweet_text_clean.txt
scrape/: load.ipynb  lol.json  scrape.ipynb
scrape/.ipynb_checkpoints/: scrape-checkpoint.ipynb
scrape/tweets/: @AlboMP.json  @Anne_Ruston.json  @Birmo.json  @Bowenchris.json  @ClareONeilMP.json  @Deborah_ONeill.json  @FionaMartinMP.json  @GrahamPerrettMP.json  @JulieOwensMP.json  @KKeneally .json  @KristyMcBain.json  @M_McCormackMP.json  @MehreenFaruqi.json  @PaulineHansonOz.json  @RobMitchellMP.json  @ScottBuchholzMP.json  @ScottMorrisonMP.json  @SenatorAbetz.json  @SenatorSurfer.json  @SharonBirdMP.json  @ShayneNeumannMP.json  @adambandt.json  @ajamesbragg.json  @almclachlan1.json  @brianmitchellmp.json  @fiboydphillips.json  @janet_rice.json  @karenandrewsmp.json  @kevinandrewsmp.json  @larissawaters.json  @nickmckim.json  @polley_helen.json  @senpaterson.json  @senraffciccone.json  @tanya_plibersek.json  @tony_burke.json  @zedseselja.json
