[tool.poetry]
name = "haroldholt2"
version = "0.1.0"
description = ""
authors = ["Louka Ewington Pitsos <lewingtonpitsos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.3.0"
ipykernel = "^6.5.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
